# cam-document-correction

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/a4detect/: __init__.py  camera.py  cv_detector.py  detector.py  draw.py  main.py  onnx_detector.py  onnx_pose_detector.py  onnx_seg_detector.py  smoothing.py  yolo_detector.py
