[project]
name = "a4detect"
version = "0.1.0"
description = "Real-time A4 paper detection and highlight from a Windows webcam (OBB-style rotated box)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "onnxruntime>=1.27.0",
    "opencv-python>=4.9",
]

[project.optional-dependencies]
# Only needed to TRAIN or EXPORT a model (pulls torch). Runtime inference uses
# the ONNX detector and does NOT need this.
#   uv sync --extra yolo
yolo = [
    "ultralytics>=8.2",
]

[project.scripts]
a4detect = "a4detect.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a4detect"]
